Change references to Snap

--- a/chrome-extension/edit.html
+++ b/chrome-extension/edit.html
@@ -20,7 +20,7 @@
   </head>
   <body class="edit_page">
     <div id="tool-panel">
-      <a id="logo" style="" href="https://github.com/rojer/a-s-minus" target="_blank">Awesome Screenshot Minus</a>
+      <a id="logo" style="" href="https://github.com/kevinychen/snap" target="_blank">Snap</a>
       <div id="annotation_bar">
         <a id="crop" class="title enabled"><span></span></a>
         <a id="rectangle" class="title enabled"><span></span></a>
@@ -60,7 +60,7 @@
         <span id="tip-text"></span>
         <span id="tip-close"></span>
       </div>
-      <a id="exit" title="Exit Awesome Screenshot"><span></span></a>
+      <a id="exit" title="Exit Snap"><span></span></a>
     </div>
     <div id="edit-area">
       <div id="saveWrapper">
