--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -9,7 +9,7 @@
 </head>
 <body class="options_page">
   <div id="wrapper">
-    <div id="header"><h1>Awesome Screenshot Options</h1></div>
+    <div id="header"><h1>Snap Options</h1></div>
     <div id="options">
       <fieldset id="format">
         <legend>Image Format</legend>
