--- a/chrome-extension/upload.html
+++ b/chrome-extension/upload.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header>
-      <a id="logo" style="" href="http://awesomescreenshot.com/" target="_blank">Awesome Screenshot</a>
-      <a id="exit" title="Exit Awesome Screenshot"><span></span></a>
+      <a id="logo" style="" href="http://github.com/kchen/snap" target="_blank">Snap</a>
+      <a id="exit" title="Exit Snap"><span></span></a>
     </header>
     <div id="dropZone">
       <div id="upload-icon"></div>
