--- a/chrome-extension/help.html
+++ b/chrome-extension/help.html
@@ -11,14 +11,15 @@
         <p>In some cases, the extension may stop working. If you experience this issue, you can solve it with these steps:</p>
         <div id="steps">
           <p>1. Open the <a id="ext-page-link" href="#">Chrome extension page</a> ("chrome://extensions/" in the address bar)</p>
-          <p>2. Find "Awesome Screenshot"</p>
-          <p>3. Disable Awesome Screenshot, then re-enable it</p>
-          <p>4. Refresh the page you want to capture with Awesome Screenshot, and try to take a screenshot again</p>
+          <p>2. Find "Snap toolbox"</p>
+          <p>3. Disable Snap, then re-enable it</p>
+          <p>4. Refresh the page you want to capture with Snap, and try to take a screenshot again</p>
         </div>
         <div class="sep"></div>
-        <p id="more">Use <a href="https://github.com/rojer/a-s-minus">GitHub</a> to file bugs and feature requests.</p>
+        <p id="more">Use <a href="https://github.com/kchen/snap">GitHub</a> to file bugs and feature requests.</p>
       </div>
     </div>
     <script type="text/javascript" src="javascripts/help.js"></script>
   </body>
 </html>
+
