Add reverse image search option

--- a/chrome-extension/edit.html
+++ b/chrome-extension/edit.html
@@ -16,9 +16,13 @@
     <script type="text/javascript" src="javascripts/jquery.md5.js"></script>
     <script type="text/javascript" src="javascripts/libs/md5.js"></script>
     <script type="text/javascript" src="javascripts/libs/swfobject.js"></script>
+    <script type="text/javascript" src="javascripts/image_search.js"></script>
     <script type="text/javascript" src="javascripts/edit.js"></script>
   </head>
   <body class="edit_page">
+    <div id="overlay">
+      <div id="overlay-text">Loading image...</div>
+    </div>
     <div id="tool-panel">
       <a id="logo" style="" href="https://github.com/kevinychen/snap" target="_blank">Snap</a>
       <div id="annotation_bar">
