Add overlay grid button

--- a/chrome-extension/edit.html
+++ b/chrome-extension/edit.html
@@ -26,35 +26,10 @@
     <div id="tool-panel">
       <a id="logo" style="" href="https://github.com/kevinychen/snap" target="_blank">Snap</a>
       <div id="annotation_bar">
-        <a id="crop" class="title enabled"><span></span></a>
-        <a id="rectangle" class="title enabled"><span></span></a>
-        <a id="ellipse" class="title enabled"><span></span></a>
-        <a id="arrow" class="title enabled"><span></span></a>
-        <a id="line" class="title enabled"><span></span></a>
-        <a id="free-line" class="title enabled"><span></span></a>
-        <a id="text-highlighter" class="title enabled"><span></span></a>
-        <a id="blur" class="title enabled"><span></span></a>
-        <a id="text" class="title enabled"><span></span></a>
-        <a id="color" class="title enabled"><span></span>
-          <ul>
-            <li style="background-color:#000000" data-highlight-color="rgba(0,0,0,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#808080" data-highlight-color="rgba(128,128,128,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#FF0000" data-highlight-color="rgba(255,0,0,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#FF9900" data-highlight-color="rgba(255,153,0,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#FFFF00" data-highlight-color="rgba(255,255,0,.3)" data-contrast-color="#808080"></li>
-            <li style="background-color:#00FF00" data-highlight-color="rgba(0,255,0,.3)" data-contrast-color="#808080"></li>
-            <li style="background-color:#FFFFFF" data-highlight-color="rgba(255,255,255,.3)" data-contrast-color="#000000"></li>
-            <li style="background-color:#C0C0C0" data-highlight-color="rgba(192,192,192,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#00FFFF" data-highlight-color="rgba(0,255,255,.3)" data-contrast-color="#808080"></li>
-            <li style="background-color:#0000FF" data-highlight-color="rgba(0,0,255,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#9900FF" data-highlight-color="rgba(153,0,255,.3)" data-contrast-color="#FFFFFF"></li>
-            <li style="background-color:#FF00FF" data-highlight-color="rgba(255,0,255,.3)" data-contrast-color="#FFFFFF"></li>
-          </ul>
-        </a>
-        <a id="undo" class="title"><span></span></a>
-        <div id="crop-dimension">
-          <div>Width:<input type="text" id="cd-width" class="cd-input"></div>
-          <div>Height:<input id="cd-height" type="text" class="cd-input"></div>
+        <a id="gridify" class="title enabled"><b></b>Overlay grid</a>
+        <div id="gridify-config">
+          <div>Threshold:<input id="gridify-threshold" type="text" class="cd-input"></div>
+          <div>Resolution:<input id="gridify-resolution" type="text" class="cd-input"></div>
         </div>
         <a id="save" class="title enabled"><b></b>Done</a>
         <a id="done" class="title enabled"><b></b>Crop</a>
