Add parse grid to extension

--- a/chrome-extension/edit.html
+++ b/chrome-extension/edit.html
@@ -27,6 +27,7 @@
       <a id="logo" style="" href="https://github.com/kevinychen/snap" target="_blank">Snap</a>
       <div id="annotation_bar">
         <a id="gridify" class="title enabled"><b></b>Overlay grid</a>
+        <a id="parse-grid" class="title enabled"><b></b>Parse grid contents</a>
         <div id="gridify-config">
           <div>Threshold:<input id="gridify-threshold" type="text" class="cd-input" value=50></div>
           <div>Resolution:<input id="gridify-resolution" type="text" class="cd-input" value=16></div>
