--- a/chrome-extension/edit.html
+++ b/chrome-extension/edit.html
@@ -200,8 +200,7 @@
           </div>
         </div>
       </div>
-      <canvas id="show-canvas" width="0" height="0"></canvas>
-      <canvas id="overlay-canvas" width="0" height="0"></canvas>
+      <canvas id="show-canvas" width="0" height="0" class="save-canvas"></canvas>
       <div id="cropdiv" class="drsElement drsMoveHandle" style="z-index:900;left: 0px; top: 0px; width: 0px; height: 0px; background: rgba(0,0,0,0);display:none; text-align: center;position:absolute;outline:1px dashed #777;cursor:move">
         <span id="crop-size"></span>
       </div>
